--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dragon-news-client-app",
+  "name": "dragon-news-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,12 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
-    "firebase": "^9.14.0",
+    "firebase": "^9.12.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.6.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
-    "react-router-dom": "^6.4.3",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
